# crow-webapp-template

./: .gitignore  AGENTS.md
app/: CMakeLists.txt  README.md  app.hpp  main.cpp  md5.hpp
app/mockdb/: easydb.hpp  namedkey.h
app/type/: deviceinfo.h
third/: crow_all.h
web/: README.md  package-lock.json  package.json  vue.config.js
web/public/: index.html
web/src/: App.vue  main.js
web/src/api/: auth.js  device-name.js
web/src/layouts/: AppLayout.vue
web/src/router/: index.js
web/src/views/: DeviceName.vue  Login.vue
