cmake_minimum_required(VERSION 3.10)
project(web_template CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

add_compile_options(-Wall -Wextra)
add_compile_definitions(CROW_DISABLE_STATIC_DIR)

add_executable(server main.cpp)

target_include_directories(server PRIVATE
    ${CMAKE_SOURCE_DIR}/../third
)

find_package(Threads REQUIRED)
target_link_libraries(server PRIVATE Threads::Threads)
